[gd_scene load_steps=7 format=2]

[ext_resource path="res://Sprites/Mobile - Bounce Original - Everything/Everything (Medium)/ring_big_top@2x.png" type="Texture" id=1]
[ext_resource path="res://Sprites/Mobile - Bounce Original - Everything/Everything (Medium)/ring_big_catched_top@2x.png" type="Texture" id=2]
[ext_resource path="res://Sprites/Mobile - Bounce Original - Everything/Everything (Medium)/ring_big_catched_bottom@2x.png" type="Texture" id=3]
[ext_resource path="res://Sprites/Mobile - Bounce Original - Everything/Everything (Medium)/ring_big_bottom@2x.png" type="Texture" id=4]
[ext_resource path="res://Scripts/anneau.gd" type="Script" id=5]

[sub_resource type="CapsuleShape2D" id=1]
radius = 13.1943
height = 0.0

[node name="anneau_grand" type="Node2D"]
position = Vector2( 182.726, 79.119 )
scale = Vector2( 0.75, 0.75 )
script = ExtResource( 5 )

[node name="Node2D2" type="Node2D" parent="."]
__meta__ = {
"_edit_group_": true
}

[node name="ring_small_catched_top2x" type="Sprite" parent="Node2D2"]
texture = ExtResource( 2 )

[node name="ring_small_top2x" type="Sprite" parent="Node2D2"]
texture = ExtResource( 1 )

[node name="Node2D" type="Node2D" parent="."]
z_index = 5

[node name="Area2D" type="Area2D" parent="Node2D"]

[node name="ring_small_catched_bottom2x" type="Sprite" parent="Node2D/Area2D"]
texture = ExtResource( 3 )

[node name="ring_small_bottom2x" type="Sprite" parent="Node2D/Area2D"]
texture = ExtResource( 4 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Node2D/Area2D"]
position = Vector2( 41.3191, 0 )
polygon = PoolVector2Array( 18, -74.9, 18, -71.3, 26, -52.4, 26, 46.7, 23.7, 62, 22.4, 62, 17.4, 76, 15.9, 76, 12.6, 80, -4, 80, -4, 57, 0, 54, 0, 22, 1.9, -19, 1.1, -19, 0.1, -53.1, -4, -57.2, -4, -80, 12, -80 )

[node name="Node2D3" type="Node2D" parent="."]

[node name="StaticBody2D" type="StaticBody2D" parent="Node2D3"]
position = Vector2( -0.512085, 86.7271 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Node2D3/StaticBody2D"]
shape = SubResource( 1 )

[node name="StaticBody2D2" type="StaticBody2D" parent="Node2D3"]
position = Vector2( -0.512085, -86.1666 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Node2D3/StaticBody2D2"]
shape = SubResource( 1 )

[connection signal="body_entered" from="Node2D/Area2D" to="." method="_on_Area2D_body_entered"]
